--- a/style.css
+++ b/style.css
@@ -215,6 +215,141 @@ body{
 .category .card:hover .card-body .card-title a{
     color: #854101;
 }
+/*====category section end======*/
+/*====Product section======*/
+.bg-img{
+    background: black;
+}
+.text-color{
+    color: #f08901;
+}
+.product-section h2{
+    font-style: italic;
+    font-size: 40px;
+}
+.product{
+    width: 100%;
+    display: block;
+    margin-bottom: 40px;
+    transition: all 0.3s ease;
+}
+.product .img{
+    display: block;
+    border-radius: 4px;
+    height: 350px;
+    position: relative;
+    transition: all 0.3s ease;
+    z-index: 0;
+    margin-left: auto;
+    margin-right: auto;
+    
+}
+.product .img:after{
+    z-index: -1;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    content: '';
+    background: black;
+    opacity: 0;
+    border-radius: 4px;
+    transition: all 0.6s ease;
+}
+.product .img .icons{
+    transition: all 0.3s ease;
+    opacity: 0;
+}
+.product .img .icons .icon-block a{
+    margin: 0 2px;
+    width: 60px;
+    height: 60px;
+    border: 1px solid rgba(255, 255, 255, 0.5);
+}
+.product .img .icons .icon-block a i{
+    color: #fff;
+}
+.product.text{
+    padding: 20px;
+    position: relative;
+}
+.product .text .out,.product .text .day,
+.product .text .week{
+    position: absolute;
+    top: 0;
+    left: 4px;
+    font-size: 12px;
+    padding: 0 10px;
+    color: white;
+}
+.product .text .out{
+    background: rgb(182, 91, 55);
+}
+.product .text .week{
+    background: #01d28e;
+}
+.product .text .day{
+    background: #fe9801;
+}
+.product .text h2{
+    font-size: 22px;
+    text-transform: capitalize;
+    font-weight: 300;
+}
+.product .text .category{
+    font-style: italic;
+    color: #fe9801;
+}
+.product .text .price{
+    font-style: italic;
+    color: white;
+}
+.product:hover .img:after{
+    opacity: .7;
+}
+.product:hover .img .icons{
+    opacity: 1;
+}
+.glow{
+    display: inline-block;
+    vertical-align: middle;
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px black;
+    transition-duration:0.3s;
+    transition-property: box-shadow;
+}
+.glow:hover, .glow:focus, .glow:active{
+    box-shadow: 1px 1px 8px orange;
+}
+.btn-prod{
+    display: inline-block;
+    vertical-align: middle;
+    color: #fe9801 !important;
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px orange;
+    position: relative;
+    overflow: hidden;
+}
+.btn-prod:before{
+    content: "";
+    position: absolute;
+    z-index: -1;
+    left: 51%;
+    right: 51%;
+    top: 0;
+    background: #fe9801;
+    height: 4px;
+    transition-property: left, right;
+    transition-duration: 0.3s;
+    transition-timing-function: ease-out;
+}
+
+.btn-prod:hover:before, .btn-prod:focus:before,
+.btn-prod:active:before{
+    left: 0;
+    right: 0;
+}
 
 
 
@@ -243,7 +378,5 @@ body{
 
 
 
-
-
-/*====category section======*/
+/*====End of Product section======*/
 
