--- a/style.css
+++ b/style.css
@@ -352,31 +352,108 @@ body{
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /*====End of Product section======*/
+/*====Team section======*/
+.chef h2{
+    color: black;
+}
+
+.chef .col-sm-3{
+    padding: 0;
+}
+.chef .card > a{
+    display: block;
+}
+
+.chef .card img{
+    width: 100%;
+}
+.chef .card h4{
+    color: white;
+    text-transform: uppercase;
+}
+.chef .card p{
+    font-size: 11px;
+    color: white;
+    opacity: .75;
+    margin: 0;
+    padding: 0 35px;
+}
+.chef .card .social-nav{
+    margin-bottom: 45px;
+}
+.chef .card .social-nav a{
+    color: white;
+    font-size: 16px;
+    margin: 0 4px;
+}
+.chef .card .social-nav a:hover{
+    opacity: 0.75;
+}
+.chef .card:hover .chef-over{
+    opacity: .75;
+    visibility:visible;
+}
+.chef .card:hover .card-title-wrap{
+    background-color: #fe9801;
+}
+.chef .card:hover .card-title-wrap .card-title,
+.chef .card:hover .card-title-wrap .card-text{
+    color: white;
+}
+.chef .chef-over{
+    padding-top: 45px;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 8);
+    top: 0;
+    left: 0;
+    text-align: center;
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.3s hidden;
+    
+}
+.chef .card-title-wrap{
+    padding: 15px 25px;
+    position: relative;
+    z-index: 9;
+    background: white;
+}
+.chef .card-title-wrap .card-title,
+.chef .card-title-wrap .card-text{
+    display: block;
+    margin: 0;
+}
+.chef .card-title-wrap .card-title{
+    font-size: 18px;
+    color: black;
+}
+
+/*====End of Team section======*/
+/*====Subscribe section======*/
+#subscribe{
+    background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)),
+    url(./Images/restaurant.jpg);
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    clip-path: polygon(0 15%, 100% 0, 100% 85%, 0 100%);
+}
+#subscribe h4{
+    font-size: 25px;
+    font-weight: bold;
+}
+#subscibe .from-control{
+    background: transparent;
+    font-size: 20px;
+}
+#subscribe .form-btn{
+    font-size: 20px;
+    background: #e79702;
+    border: 3px solid #fe9801;
+}
+/*====End subscribe section======*/
 
