--- a/style.css
+++ b/style.css
@@ -455,5 +455,94 @@ body{
     background: #e79702;
     border: 3px solid #fe9801;
 }
-/*====End subscribe section======*/
+/*====End of subscribe section======*/
+
+/*====Blog section======*/
+
+.blog-start{
+    overflow: hidden;
+    width: 100%;
+    position: relative;
+    z-index: 0;
+}
+@media (min-width: 768px){
+    .blog-start{
+        margin-bottom: 30px;
+    }
+}
+.blog-start .img, .blog-start .text{
+    width: 50%;
+}
+@media (max-width: 992px){
+    .blog-start .img, .blog-start .text{
+        width: 100%;
+    }
+}
+@media(max-width:768px){
+    .blog-start .img{
+        height: 300px;
+    }
+}
+.blog-start .text{
+    position: relative;
+    margin: 0 auto;
+    z-index: 0;
+}
+.blog-start .text .heading{
+    font-size: 22px;
+    margin-bottom: 0;
+    font-weight: bold;
+    font-style: italic;
+}
+
+.blog-start .text .heading a{
+    color: black;
+}
+.blog-start .text .heading a:hover,
+.blog-start .text .heading a:focus,
+.blog-start .text .heading a:active{
+    color: #e79702;
+}
+.blog-start .des p i{
+    padding-right: 10px;
+}
+.blog-start .btn-custom{
+    color: #e79702;
+    font-style: italic;
+    font-weight: bold;
+}
+.blog-start .btn-custom i{
+    font-size: 12px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*====End of Blog section section======*/
 
